tests/fixtures/coflow/invalid/parse/invalid-assignment-target.cf
fn main() {
  a + b = 1
}
